logs/enslyon.existda.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/enslyon'...
Listing './lib/python3.5/site-packages/enslyon/existda'...
Listing './lib/python3.5/site-packages/enslyon/existda/dtml'...
Compiling './lib/python3.5/site-packages/enslyon/existda/eXistDA.py'...
***   File "./lib/python3.5/site-packages/enslyon/existda/eXistDA.py", line 521
    print "ici"
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/enslyon/existda/eXistDAresult.py'...
***   File "./lib/python3.5/site-packages/enslyon/existda/eXistDAresult.py", line 109
    raise TypeError, 'Right operand must be a eXistDAresult'
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/enslyon/existda/help'...
Listing './lib/python3.5/site-packages/enslyon/existda/images'...
Listing './lib/python3.5/site-packages/enslyon/existda/locales'...
Listing './lib/python3.5/site-packages/enslyon/existda/locales/fr'...
Listing './lib/python3.5/site-packages/enslyon/existda/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enslyon/existda/profiles'...
Listing './lib/python3.5/site-packages/enslyon/existda/profiles/default'...
Listing './lib/python3.5/site-packages/enslyon.existda-1.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
